2008-02-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-06
	* data: improve VStringParameter::setValue()

2008-02-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-05
	* gui: improve save/load/import/export configuration dialogs (filters,
	list views, doc listeners, etc.)
	* data: InputTag propagation fix ([V]PSets)
	* data: strip quotes from InputTag values

2008-02-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-04
	* db: tough bug fixed by Ulf
	* db: 'hasChanged' problem fixed
	* data: correct treatment of '-cff' parameter for edmConfigFromDB
	* converter: various fixes regardin exceptions and python (Ulf)

2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-03
	* converter: bugfix to ConverterBase::getConfiguration()

2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-02
	* db: introduce proper exception handling
	* diff: introduce proper exception handling
	* migrator: introduce proper exception handling
	* data: fix/feature to ConfigurationModifier: only insert
	ShmStreamConsumer if none present in the configuration

2008-01-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-01
	* clean-up of confdb.gui.treetable

2008-01-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-00
	* add confdb.diff package
	* currently allows comparisons of entire configurations only
	* works together with edmConfDBDiff scripts, to be checked into
	EventFilter/Utilities/scripts

2008-01-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-18-04
	* gui upgrade: Search&Replace can now be applied to the entire
	configuration, not just to the parameters of a single template

2008-01-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-18-02
	* data bugfix (ModifierIntructions): if unreferenced sequences are